--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -8,6 +8,8 @@
     <div class="container text-center">
       <div class="home-search p-5">
         <div class="overlay p-5">
+          <!-- Alerts -->
+          {% include 'partials/_alerts.html' %}
           <h1 class="display-4 mb-4">
             Property Searching Just Got So Easy
           </h1>
