--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+| Get A Free Account
+{% endblock title %}
+
 {% block content %}
 
   <section id="register" class="bg-light py-5">
